# se-toolkit-lab-8

./: .docker-build-force-refresh  .gitmodules  AGENTS.md  FINAL_SUMMARY.md  REPORT.md  SESSION_SUMMARY_20260328.md  TASK3C_COMPLETE.txt  TASK3C_README.md  TASK4_ACCEPTANCE.md  TASK4_COMPLETE.md  TASK4_PR_GUIDE.md  TASK4_WEBCHAT_FIX.md  TASK_STATUS.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-lms/: pyproject.toml
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/src/nanobot_agent/: __init__.py
nanobot/workspace/skills/health-check-cron/: README.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: test-agent-cron.py  test-docker-build.sh
wiki/: task-4-integration.md
